fix mobile navbar dropdown spacing and alignment of login and signup

--- a/app/styles/_baseLayout.scss
+++ b/app/styles/_baseLayout.scss
@@ -43,16 +43,15 @@ label.btn.btn-link {
             color: white;
             display: inline-block;
             font-size: 20px;
-            width: 95px;
             text-decoration: none;
             padding: 15px 0 15px 0;
             margin:-15px 0 -3px 0;
-            text-align: center;
             &:hover {
                 background-color: rgba(0, 0, 0, 0.3)
             }
             &:last-child {
-                /*float: right;*/
+                margin-left: 150px;
+                margin-right: 0px;
             }
         }
     }
